Link Contentful API to 'thoughts' Change CLI title font Edit 'resources' content Fix horizontal overflow in content containers

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -5,6 +5,10 @@
     color: var(--text-color-normal);
 }
 
+.bodyWrapper * {
+    box-sizing: border-box;
+}
+
 .side-menu {
     width: 135px;
     flex-shrink: 0;
@@ -40,8 +44,9 @@ button:hover {
     font-weight: bold;
 }
 
-.content {
+.bodyWrapper .content {
     display: flex;
+    flex-direction: column;
 }
 
 .contentText {
@@ -62,7 +67,6 @@ button:hover {
     border-radius: 9px;
     padding: 27px 36px;
     min-height: 110px;
-    width: 387px;
     max-height: 70vh;
     overflow-y: auto;
 }
@@ -143,28 +147,4 @@ th {
     flex-direction: column;
     justify-content: center;
     margin-bottom: 9px;
-}
-
-.popout-container {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    border: 1px solid #ccc;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-    z-index: 999;
-}
-
-.popout-content {
-    padding: 20px;
-}
-
-.close-button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
 }
